# alarmo

./: .gitattributes  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  README.md  __init__.py  alarm_control_panel.py  automations.py  config_flow.py  const.py  hacs.json  helpers.py  manifest.json  panel.py  pyproject.toml  pytest.ini  requirements_test.txt  sensors.py  services.yaml  store.py  test_group_triggering_delay.py
.github/: dependabot.yaml  issue-label-bot.yaml
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yaml  frontend-build.yaml  hassfest.yaml  stale.yaml  validate.yaml
custom_components/: __init__.py
custom_components/alarmo/: .pylintrc  __init__.py  alarm_control_panel.py  automations.py  card.py  config_flow.py  const.py  event.py  helpers.py  history.py  icons.json  manifest.json  mqtt.py  panel.py  sensor_service.py  sensors.py  services.yaml  sia.py  store.py  websockets.py
custom_components/alarmo/card/: .prettierrc  package.json  rollup.config.js  tsconfig.json
custom_components/alarmo/frontend/: .eslintrc.js  .prettierrc  eslint.config.js  eslint.config.mjs  package.json  rollup.config.js
custom_components/alarmo/translations/: af.json  ar.json  ca.json  de.json  en.json  (+9 more)
frontend/: package.json
frontend/localize/: localize.ts
frontend/src/: alarm-mode-card.ts  alarm-panel.ts  const.ts  dialog-sensor-edit.ts  dialog-user-edit.ts  dialog-user-new.ts  helpers.ts  interface.ts  labeled-slider.ts  load-ha-form.js  settings-row.ts  styles.ts  types.ts  view-actions.ts  view-codes.ts  view-general.ts  view-sensors.ts
test/: test_sensor_service.py
tests/: README.md  common.py  conftest.py  factories.py  helpers.py  storage_protocol.py  test_alarm_master.py  test_arm_on_close.py  test_automations.py  test_basic_features.py  test_bypass_mode.py  test_delay_on.py  test_environmental_sensors.py  test_events.py  test_group_triggering_delay.py  test_last_triggered_attribute.py  test_per_sensor_entry_delay.py  test_ready_to_arm_events.py  test_sensor_groups.py  test_sensor_service.py  test_sia.py  test_startup_sensor_evaluation.py  test_trigger_delay.py  test_trigger_timeout_behavior.py  test_user_permissions.py
(+115 files in other folders)
