[project]
name = "alarmo"
version = "0.1.0"
description = "an alarm system integration for Home Assistant."
readme = "README.md"
requires-python = "==3.13.2"
dependencies = [
    "homeassistant~=2025.10.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-homeassistant-custom-component>=0.13.243",
]

[tool.uv]
required-version = ">=0.9.0"